--- a/ocrconverter/app/src/main/res/values/styles.xml
+++ b/ocrconverter/app/src/main/res/values/styles.xml
@@ -1,6 +1,8 @@
 <resources>
 
-    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppBarOverlay" parent="Theme.AppCompat.DayNight.DarkActionBar">
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+    </style>
 
     <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
