--- a/ocrconverter/app/src/main/res/layout/ocr_capture.xml
+++ b/ocrconverter/app/src/main/res/layout/ocr_capture.xml
@@ -3,7 +3,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/ocr_activity_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
@@ -36,7 +36,7 @@
         </com.google.android.gms.samples.vision.ocrreader.ui.camera.CameraSourcePreview>
     </FrameLayout>
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
+        android:id="@+id/navigation_view_ocr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/windowBackground"
