--- a/ocrconverter/app/src/main/res/menu/navigation_ocr.xml
+++ b/ocrconverter/app/src/main/res/menu/navigation_ocr.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_camera"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_camera" />
+        android:id="@+id/navigation_screenshot"
+        android:icon="@drawable/camera_icon"
+        android:title="@string/title_ocr_screenshot" />
 
 </menu>
